--- a/style.css
+++ b/style.css
@@ -6,23 +6,23 @@ body {
   font-family: Lato, sans-serif;
 }
 
-.aaa {
+.info {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
 
-.aaa img {
+.info img {
   width: 100%;
 }
 
-.aaa .more-inf {
+.info .more-info {
   font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
-  .aaa {
+  .info {
       text-align: center;
   }
 }
